--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/api/launchpad/perspectives.js.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/api/launchpad/perspectives.js.template
@@ -9,14 +9,16 @@
  */
 
 var extensions = require('core/v3/extensions');
+var request = require('http/v3/request');
 var response = require('http/v3/response');
 
 var perspectives = [];
 
+var relativePath = getRelativePath(request.getParameter('pathSegments'));
 var perspectiveExtensions = extensions.getExtensions('launchpad-{{extensionName}}-perspective');
 for (var i = 0; perspectiveExtensions !== null && i < perspectiveExtensions.length; i++) {
     var perspectiveExtension = require(perspectiveExtensions[i]);
-    var perspective = perspectiveExtension.getPerspective();
+    var perspective = perspectiveExtension.getPerspective(relativePath);
     perspectives.push(perspective);
 }
 
@@ -25,3 +27,11 @@ perspectives.sort(function(p, n) {
 });
 
 response.println(JSON.stringify(perspectives));
+
+function getRelativePath(pathSegments) {
+	var relativePath = '';
+	for (var i = 0; i < pathSegments; i ++) {
+		relativePath += '../';
+	}
+	return relativePath;
+}
