--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/api/launchpad/tiles.js.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/api/launchpad/tiles.js.template
@@ -9,14 +9,16 @@
  */
 
 var extensions = require('core/v3/extensions');
+var request = require('http/v3/request');
 var response = require('http/v3/response');
 
 var tiles = [];
 
+var relativePath = getRelativePath(request.getParameter('pathSegments'));
 var tileExtensions = extensions.getExtensions('launchpad-{{extensionName}}-tiles');
 for (var i = 0; tileExtensions !== null && i < tileExtensions.length; i++) {
     var tileExtension = require(tileExtensions[i]);
-    var tile = tileExtension.getTile();
+    var tile = tileExtension.getTile(relativePath);
     var found = false;
     for (var j = 0 ; j < tiles.length ; j ++) {
     	if (tiles[j].group === tile.group) {
@@ -41,3 +43,11 @@ tiles = tiles.sort(function(a, b) {
 });
 
 response.println(JSON.stringify(tiles));
+
+function getRelativePath(pathSegments) {
+	var relativePath = '';
+	for (var i = 0; i < pathSegments; i ++) {
+		relativePath += '../';
+	}
+	return relativePath;
+}
