--- a/templates/template-application-launchpad/src/main/resources/template-application-launchpad/extensions/perspective.js.template
+++ b/templates/template-application-launchpad/src/main/resources/template-application-launchpad/extensions/perspective.js.template
@@ -8,11 +8,11 @@
  * SAP - initial API and implementation
  */
 
-exports.getPerspective = function() {
+exports.getPerspective = function(relativePath) {
 	return {
 		'name': 'Home',
 		'image': 'home',
-		'link': '/services/v3/web/{{projectName}}/index.html',
+		'link': relativePath + 'services/v3/web/{{projectName}}/index.html',
 		'order': 0
 	};
 };
