--- a/modules/core/core-all/pom.xml
+++ b/modules/core/core-all/pom.xml
@@ -57,6 +57,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-core-registry</artifactId>
+            <version>3.2.7-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-core-scheduler</artifactId>
             <version>3.2.7-SNAPSHOT</version>
         </dependency>
