--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -20,6 +20,7 @@
 		<module>core-indexing</module>
 		<module>core-messaging</module>
 		<module>core-publisher</module>
+		<module>core-registry</module>
 		<module>core-scheduler</module>
 		<module>core-security</module>
 		<module>core-workspace</module>
