docker files with TAG update

--- a/releng/server-keycloak-all/Dockerfile
+++ b/releng/server-keycloak-all/Dockerfile
@@ -1,7 +1,7 @@
 # Docker descriptor for Dirigible
 # License - http://www.eclipse.org/legal/epl-v10.html
  
-FROM dirigiblelabs/dirigible:3.2.5-base-platform-keycloak
+FROM dirigiblelabs/dirigible-base-platform-keycloak:$TAG
 
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
