--- a/releng/server-keycloak-all/Dockerfile-base
+++ b/releng/server-keycloak-all/Dockerfile-base
@@ -1,7 +1,7 @@
 # Docker descriptor for Dirigible
 # License - http://www.eclipse.org/legal/epl-v10.html
  
-FROM dirigiblelabs/dirigible:base-platform-3.2.5
+FROM dirigiblelabs/dirigible-base-platform:$TAG
 
 RUN rm /usr/local/tomcat/conf/tomcat-users.xml
 RUN curl https://downloads.jboss.org/keycloak/4.0.0.Beta3/adapters/keycloak-oidc/keycloak-tomcat8-adapter-dist-4.0.0.Beta3.zip --create-dirs -o /usr/local/tomcat/lib/keycloak-tomcat8-adapter-dist.zip
