--- a/releng/server-keycloak-all/Dockerfile
+++ b/releng/server-keycloak-all/Dockerfile
@@ -1,7 +1,7 @@
 # Docker descriptor for Dirigible
 # License - http://www.eclipse.org/legal/epl-v10.html
  
-FROM dirigiblelabs/dirigible-base-platform-keycloak:$TAG
+FROM dirigiblelabs/dirigible-base-platform-keycloak:latest
 
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
