--- a/releng/server-runtime/Dockerfile
+++ b/releng/server-runtime/Dockerfile
@@ -1,7 +1,8 @@
 # Docker descriptor for Dirigible
 # License - http://www.eclipse.org/legal/epl-v10.html
- 
-FROM dirigiblelabs/dirigible-base-platform-runtime:$TAG
+
+ARG DIRIGIBLE_VERSION=latest
+FROM dirigiblelabs/dirigible-base-platform-runtime:$DIRIGIBLE_VERSION
 
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
