--- a/releng/trial-all/Dockerfile-base
+++ b/releng/trial-all/Dockerfile-base
@@ -5,4 +5,7 @@ FROM tomcat:8.5.33-jre8
 
 RUN rm -R /usr/local/tomcat/webapps/*
 COPY target/ROOT.war $CATALINA_HOME/webapps/
+RUN unzip $CATALINA_HOME/webapps/ROOT.war -d $CATALINA_HOME/webapps/ROOT
+RUN rm $CATALINA_HOME/webapps/ROOT.war
+
 RUN wget https://jdbc.postgresql.org/download/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
