Fixed: #332 - built-in database configuration for Flowable

--- a/modules/bpm/bpm-flowable/pom.xml
+++ b/modules/bpm/bpm-flowable/pom.xml
@@ -84,13 +84,14 @@
 		
 		<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-commons-test</artifactId>
+			<artifactId>dirigible-database-h2</artifactId>
 			<version>3.2.8-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>provided</scope>
     	</dependency>
-    	<dependency>
+		
+		<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-database-derby</artifactId>
+			<artifactId>dirigible-commons-test</artifactId>
 			<version>3.2.8-SNAPSHOT</version>
 			<scope>test</scope>
     	</dependency>
