--- a/pom.xml
+++ b/pom.xml
@@ -405,6 +405,7 @@
 		<module>groups/runtime-all</module>
 		<module>groups/runtime-javascript</module>
 
+		<module>releng/anonymous-all</module>
 		<module>releng/desktop-all</module>
 		<module>releng/sap-all</module>
 		<module>releng/server-all</module>
