Fixed: #334 - Generic Engine Notion

--- a/modules/repository/repository-database/src/main/resources/dirigible-repository-database.properties
+++ b/modules/repository/repository-database/src/main/resources/dirigible-repository-database.properties
@@ -10,3 +10,4 @@
 
 DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_TYPE=managed
 DIRIGIBLE_REPOSITORY_DATABASE_DATASOURCE_NAME=DefaultDB
+DIRIGIBLE_REPOSITORY_PROVIDER=database
