Fix #335 [IDE] Branding Support

--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -31,6 +31,11 @@
 	<dependencies>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-ide-ui-branding</artifactId>
+		 	<version>3.2.8-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-ide-ui-core</artifactId>
 		 	<version>3.2.8-SNAPSHOT</version>
 		</dependency>
