--- a/ide/ui/pom.xml
+++ b/ide/ui/pom.xml
@@ -41,6 +41,7 @@
 		<module>ide-group-database</module>
 		
 		<!-- Plugin Modules -->
+		<module>ide-branding</module>
 		<module>ide-console</module>
 		<module>ide-core</module>
 		<module>ide-database</module>
