--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -19,6 +19,7 @@
         <module>ide-all</module>
         <module>ide-javascript</module>
         <module>ide-database</module>
+		<module>ide-cms</module>
         
         <!-- Plugin Modules -->
 		<module>services</module>
