--- a/pom.xml
+++ b/pom.xml
@@ -408,12 +408,14 @@
 		<module>releng/anonymous-all</module>
 		<module>releng/desktop-all</module>
 		<module>releng/sap-all</module>
+		<module>releng/sap-cms</module>
 		<module>releng/server-all</module>
 		<module>releng/server-keycloak-all</module>
 		<module>releng/server-runtime</module>
 		<module>releng/trial-all</module>
 		<module>releng/server-javascript</module>
 		<module>releng/server-database</module>
+		<module>releng/server-cms</module>
 		<module>releng/embedded-all</module>
 	</modules>
 
