test dependencies fix

--- a/modules/core/core-registry/pom.xml
+++ b/modules/core/core-registry/pom.xml
@@ -46,6 +46,18 @@
 			<version>3.2.8-SNAPSHOT</version>
 			<scope>test</scope>
     	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-h2</artifactId>
+			<version>3.2.8-SNAPSHOT</version>
+			<scope>test</scope>
+    	</dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-local</artifactId>
+            <version>3.2.8-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
