--- a/releng/server-cms/src/main/webapp/WEB-INF/web.xml
+++ b/releng/server-cms/src/main/webapp/WEB-INF/web.xml
@@ -128,6 +128,7 @@
 	        <url-pattern>/services/v3/rhino/*</url-pattern>
 	        <url-pattern>/services/v3/v8/*</url-pattern>
 	        <url-pattern>/services/v3/wiki/*</url-pattern>
+	        <url-pattern>/services/v3/command/*</url-pattern>
 	    </web-resource-collection>
 	    <auth-constraint>
 	        <role-name>Everyone</role-name>
