Fix #354 [Trial] Add Run-on Form

--- a/ide/ui/pom.xml
+++ b/ide/ui/pom.xml
@@ -47,6 +47,7 @@
 		<module>ide-core</module>
 		<module>ide-workbench</module>
 		<module>ide-database</module>
+		<module>ide-deploy-manager</module>
 		<module>ide-documents</module>
 		<module>ide-git</module>
 		<module>ide-help</module>
