--- a/pom.xml
+++ b/pom.xml
@@ -412,6 +412,7 @@
 		<module>releng/server-all</module>
 		<module>releng/server-keycloak-all</module>
 		<module>releng/server-runtime</module>
+		<module>releng/server-runtime-keycloak</module>
 		<module>releng/trial-all</module>
 		<module>releng/server-javascript</module>
 		<module>releng/server-database</module>
