--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - docker push $REPO_BASE_KEYCLOAK:$DIRIGIBLE_VERSION
   
 # Image dirigiblelabs/dirigible-base-platform-runtime
-  - docker build -f releng/server-runtime/Dockerfile-base -t $REPO_BASE_RUNTIME:$COMMIT --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION releng/server-runtime-keycloak
+  - docker build -f releng/server-runtime/Dockerfile-base -t $REPO_BASE_RUNTIME:$COMMIT --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION releng/server-runtime
   - docker tag $REPO_BASE_RUNTIME:$COMMIT $REPO_BASE_RUNTIME:$DIRIGIBLE_VERSION
   - docker push $REPO_BASE_RUNTIME:$DIRIGIBLE_VERSION
 
