--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -24,6 +24,7 @@
 		<module>api-utils</module>
 		<module>api-io</module>
 		<module>api-messaging</module>
+		<module>api-repository</module>
 		<module>api-indexing</module>
 		<module>api-log</module>
 		<module>api-cms</module>
