--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -44,6 +44,7 @@
 		<module>api-database</module>
 		<module>api-io</module>
 		<module>api-messaging</module>
+		<module>api-repository</module>
 		<module>api-indexing</module>
 		<module>api-log</module>
 		<module>api-test</module>
