#377 RepositoryFacade and Enterprise JavaScript API fixes

--- a/api/api-javascript/api-repository/src/main/resources/repository/project.json
+++ b/api/api-javascript/api-repository/src/main/resources/repository/project.json
@@ -1,1 +1,8 @@
-{"guid":"repository","repository":{"type":"git","branch":"master","url":"https://github.com/dirigiblelabs/api-v3-repository.git"}}
+{
+	"guid": "repository",
+	"repository": {
+		"type": "git",
+		"branch": "master",
+		"url": "https://github.com/dirigiblelabs/api-v3-repository.git"
+	}
+}
