--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,11 @@ script:
   - docker tag $REPO_BASE_RUNTIME:$COMMIT $REPO_BASE_RUNTIME:$DIRIGIBLE_VERSION
   - docker push $REPO_BASE_RUNTIME:$DIRIGIBLE_VERSION
 
+# Image dirigiblelabs/dirigible-base-platform-runtime-anonymous
+  - docker build -f releng/anonymous-runtime/Dockerfile-base -t $REPO_BASE_ANONYMOUS_RUNTIME:$COMMIT --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION releng/anonymous-runtime
+  - docker tag $REPO_BASE_ANONYMOUS_RUNTIME:$COMMIT $REPO_BASE_ANONYMOUS_RUNTIME:$DIRIGIBLE_VERSION
+  - docker push $REPO_BASE_ANONYMOUS_RUNTIME:$DIRIGIBLE_VERSION
+
 # Image dirigiblelabs/dirigible-base-platform-runtime-keycloak
   - docker build -f releng/server-runtime-keycloak/Dockerfile-base -t $REPO_BASE_RUNTIME_KEYCLOAK:$COMMIT --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION releng/server-runtime-keycloak
   - docker tag $REPO_BASE_RUNTIME_KEYCLOAK:$COMMIT $REPO_BASE_RUNTIME_KEYCLOAK:$DIRIGIBLE_VERSION
@@ -71,6 +76,10 @@ script:
   - docker tag $REPO_RUNTIME:$COMMIT $REPO_RUNTIME:$DIRIGIBLE_VERSION
   - docker push $REPO_RUNTIME:$DIRIGIBLE_VERSION
 
+# Image dirigiblelabs/dirigible-runtime-anonymous
+  - docker build -f releng/anonymous-runtime/Dockerfile -t $REPO_ANONYMOUS_RUNTIME:$COMMIT --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION releng/anonymous-runtime
+  - docker tag $REPO_ANONYMOUS_RUNTIME:$COMMIT $REPO_ANONYMOUS_RUNTIME:$DIRIGIBLE_VERSION
+  - docker push $REPO_ANONYMOUS_RUNTIME:$DIRIGIBLE_VERSION
 
 # Image dirigiblelabs/dirigible-runtime-keycloak
   - docker build -f releng/server-runtime-keycloak/Dockerfile -t $REPO_RUNTIME_KEYCLOAK:$COMMIT --build-arg DIRIGIBLE_VERSION=$DIRIGIBLE_VERSION releng/server-runtime-keycloak
@@ -82,12 +91,14 @@ env:
     - REPO=dirigiblelabs/dirigible-tomcat
     - REPO_BASE=dirigiblelabs/dirigible-base-platform
     - REPO_BASE_ANONYMOUS=dirigiblelabs/dirigible-base-platform-anonymous
+    - REPO_BASE_ANONYMOUS_RUNTIME=dirigiblelabs/dirigible-base-platform-runtime-anonymous
     - REPO_BASE_TRIAL=dirigiblelabs/dirigible-base-platform-trial
     - REPO_BASE_KEYCLOAK=dirigiblelabs/dirigible-base-platform-keycloak
     - REPO_BASE_RUNTIME=dirigiblelabs/dirigible-base-platform-runtime
     - REPO_BASE_RUNTIME_KEYCLOAK=dirigiblelabs/dirigible-base-platform-runtime-keycloak
     - REPO_ALL=dirigiblelabs/dirigible-all
     - REPO_ANONYMOUS=dirigiblelabs/dirigible-anonymous
+    - REPO_ANONYMOUS_RUNTIME=dirigiblelabs/dirigible-runtime-anonymous
     - REPO_TRIAL=dirigiblelabs/dirigible-trial
     - REPO_KEYCLOAK=dirigiblelabs/dirigible-keycloak
     - REPO_RUNTIME=dirigiblelabs/dirigible-runtime
