--- a/releng/anonymous-all/src/main/resources/dirigible.properties
+++ b/releng/anonymous-all/src/main/resources/dirigible.properties
@@ -13,4 +13,4 @@ DIRIGIBLE_PRODUCT_NAME=${project.title}
 DIRIGIBLE_PRODUCT_VERSION=${project.version}
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=anonymous
-
+DIRIGIBLE_DATABASE_PROVIDER=local
