--- a/releng/anonymous-runtime/src/main/webapp/WEB-INF/web.xml
+++ b/releng/anonymous-runtime/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,19 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>CorsFilter</filter-name>
+		<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+		<init-param>
+			<param-name>cors.allowed.origins</param-name>
+			<param-value>*</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CorsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<session-config>
 		<session-timeout>1440</session-timeout>
 	</session-config>
