--- a/releng/server-cms/src/main/webapp/WEB-INF/web.xml
+++ b/releng/server-cms/src/main/webapp/WEB-INF/web.xml
@@ -74,6 +74,18 @@
 		<filter-name>DoSFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<filter>
+		<filter-name>CorsFilter</filter-name>
+		<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+		<init-param>
+			<param-name>cors.allowed.origins</param-name>
+			<param-value>*</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CorsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<!-- <resource-ref>
 		<res-ref-name>jdbc/DefaultDB</res-ref-name>
